# coins-bot

./: CMakeLists.txt  coins-bot.pro  main.cpp  migration.sql
db/: connector.cpp  connector.h
db/tables/: balance.cpp  balance.h  user.cpp  user.h
